# nueva-engine

./: .gitignore  CLAUDE.md  Cargo.toml  NUEVA_CLAUDE_CODE_PROMPT.md  NUEVA_IMPLEMENTATION (3).md  NUEVA_SETUP_COMMANDS.md
.claude/: settings.local.json
docs/: ACE_STEP_INTEGRATION.md
nueva/: .gitignore  Cargo.toml
nueva/benches/: dsp_benchmarks.rs
nueva/examples/: generate_fixtures.rs
nueva/src/: error.rs  lib.rs
nueva/src/agent/: mod.rs
nueva/src/audio/: buffer.rs  io.rs  mod.rs  verification.rs
nueva/src/dsp/: chain.rs  effects.rs  mod.rs
nueva/src/engine/: mod.rs  transport.rs
nueva/src/layers/: mod.rs
nueva/src/neural/: mod.rs
nueva/src/state/: mod.rs
nueva/tests/: audio_quality_tests.rs  integration_tests.rs
nueva/tests/audio_quality/: artifacts.rs  effect_quality.rs  mod.rs  passthrough.rs
nueva/tests/fixtures/: README.md  generate_fixtures.sh
nueva/tests/integration/: full_pipeline.rs  mod.rs  project_lifecycle.rs
python/: pyproject.toml
python/nueva/: __init__.py  ace_step.py  bridge.py
python/nueva_ai_bridge/: __init__.py  __main__.py  acestep_client.py  process_manager.py  protocol.py  pyproject.toml  server.py
python/nueva_ai_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: install-ace-step.ps1  install-ace-step.sh
src/: error.rs  lib.rs  main.rs
src/agent/: context.rs  decision.rs  explain.rs  intent.rs  mod.rs  reference.rs  safety.rs  undo.rs
src/cli/: commands.rs  mod.rs
src/dsp/: audio_buffer.rs  chain.rs  compressor.rs  delay.rs  effect.rs  eq.rs  gain.rs  gate.rs  limiter.rs  mod.rs  reverb.rs  saturation.rs
src/engine/: buffer.rs  io.rs  mod.rs  transport.rs
src/layers/: layer0.rs  layer1.rs  layer2.rs  mod.rs  project.rs
src/neural/: ace_step.rs  acestep.rs  context.rs  gpu.rs  mock.rs  mod.rs  model.rs  registry.rs
src/state/: autosave.rs  crash_recovery.rs  error.rs  migration.rs  mod.rs  project.rs  storage.rs  undo.rs
tests/: agent_tests.rs  integration_acestep.rs  integration_tests.rs
