[package]
name = "nueva"
version = "0.1.0"
edition = "2021"
authors = ["Nueva Team"]
description = "Functional audio processing system with AI agent interface"
license = "MIT"
repository = "https://github.com/nueva/nueva"

[lib]
name = "nueva"
path = "src/lib.rs"

[[bin]]
name = "nueva-cli"
path = "src/bin/cli.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (for future AI bridge)
tokio = { version = "1.0", features = ["full"], optional = true }

# HTTP client for ACE-Step bridge communication
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for effect IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
pretty_assertions = "1.0"
test-case = "3.0"

[features]
default = []
async-bridge = ["tokio"]
# Real ACE-Step integration via HTTP bridge
acestep = ["reqwest"]
# Use mock ACE-Step for testing without real model
acestep-mock = []

[workspace]
members = ["."]
