[package]
name = "nueva"
version = "0.1.0"
edition = "2021"
description = "Functional audio processing system with AI agent interface"
license = "MIT"

[lib]
name = "nueva"
path = "src/lib.rs"

[[bin]]
name = "nueva-cli"
path = "src/bin/cli.rs"

[dependencies]
# Audio I/O
hound = "3.5"

# FFT for spectral analysis
rustfft = "6.2"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (future)
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
# Testing
approx = "0.5"
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "dsp_benchmarks"
harness = false

[features]
default = []
all-features = []
