[project]
name = "nueva-ai-bridge"
version = "0.1.0"
description = "AI Bridge for Nueva audio processing - ACE-Step 1.5 integration"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ace-step = [
    "gradio>=4.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "diffusers>=0.24.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nueva-ai-bridge = "nueva.bridge:main"
nueva-ace-step = "nueva.ace_step:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
